--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+# ===============================
+# TOMCAT
+# ===============================
+server.port = 8088
+server.servlet.encoding.charset = UTF-8
